# libdaemond

./: .gitignore  CMakeLists.txt
ex/: io_wrapper.cpp  io_wrapper.h  sample.c  sample.cpp  strings_manip.cpp  strings_manip.h  test.sh
src/: libdaemond.c  libdaemond.h
